--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,9 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <h2>This is the content of the index page</h2>
+    </main>
     <footer></footer>
 </body>
 </html>
