--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
         <h1>Hello world!</h1>
         <nav>
             <ul>
-                <li><a href="">menu 1</a></li>
+                <li><a href="weather">Pogoda</a></li>
                 <li><a href="">menu 2</a></li>
                 <li><a href="">menu 3</a></li>
                 <li><a href="">menu 4</a></li>
