--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <meta charset="UTF-8">
@@ -7,21 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt</title>
 </head>
+
 <body>
-    <header>
-        <h1>Hello world!</h1>
-        <nav>
-            <ul>
-                <li><a href="weather">Pogoda</a></li>
-                <li><a href="">menu 2</a></li>
-                <li><a href="">menu 3</a></li>
-                <li><a href="">menu 4</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="header"></div>
     <main>
         <h2>This is the content of the index page</h2>
     </main>
     <footer></footer>
+
+    <script>
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', 'header.html');
+        xhr.onload = function () {
+            document.getElementById('header').innerHTML = xhr.response;
+        };
+        xhr.send();
+    </script>
 </body>
+
 </html>
