--- a/views/weather.html
+++ b/views/weather.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,12 @@
     <title>Apka pogodowa</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <div id="header"></div>
     <main>
         <!-- panel pobierania informacji -->
-        
+
         <div class="top">
             <input type="text" placeholder="wpisz nazwę miasta">
             <button>Sprawdź pogodę!</button>
@@ -37,5 +40,14 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="./weather.js"></script>
+    <script>
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', 'header.html');
+        xhr.onload = function () {
+            document.getElementById('header').innerHTML = xhr.response;
+        };
+        xhr.send();
+    </script>
 </body>
+
 </html>
