add form, post form

--- a/views/weather.html
+++ b/views/weather.html
@@ -38,7 +38,7 @@
             <p>Zachmurzenie: <span class="cloud"></span></p>
         </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script> -->
     <script src="./weather.js"></script>
     <script>
         var xhr = new XMLHttpRequest();
