--- a/views/weather.html
+++ b/views/weather.html
@@ -1,45 +1,32 @@
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apka pogodowa</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Pogoda!</title>
 </head>
-
 <body>
     <div id="header"></div>
     <main>
-        <!-- panel pobierania informacji -->
-
-        <div class="top">
-            <input type="text" placeholder="wpisz nazwę miasta">
+        <div class="input">
+            <input type="text" placeholder="Wprowadź nazwę miasta">
             <button>Sprawdź pogodę!</button>
-            <p class="error"></p>
         </div>
-
-        <!-- panel wyświetlania -->
-        <div class="bottom">
-            <p class="date"></p>
-            <h2 class="cityName"></h2>
-            <div class="weatherBox">
-                <img src="" alt="">
-                <div class="temperatureBox">
-                    <p class="temperature"></p>
-                    <p class="temperatureDescription"></p>
-                </div>
-            </div>
-            <p>Temperatura odczuwalna: <span class="feelsTemp"></span></p>
-            <p>Prędkość wiatru: <span class="windSpeed"></span></p>
-            <p>Wilgotność: <span class="humidity"></span></p>
-            <p>Ciśnienie: <span class="pressure"></span></p>
-            <p>Zachmurzenie: <span class="cloud"></span></p>
+        <div class="output">
+            <h2 class="city"></h2>
+            <h3 class="temperature"></h3>
+            <p class="description"></p>
+            <p>Temperatura odczuwalna: <span class="feltTemperature"></span></p>
+            <p>Prędkość wiatru: <span class="wind"></span></p>
+            <p>Wilgotność powietrza: <span class="humidity"></span></p>
+            <p>Ciśnienie atmosferyczne: <span class="pressure"></span></p>
+            <p>Zachmurzenie: <span class="cloudiness"></span></p>
         </div>
     </main>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script> -->
-    <script src="./weather.js"></script>
+    <footer></footer>
+
     <script>
         var xhr = new XMLHttpRequest();
         xhr.open('GET', 'header.html');
@@ -48,6 +35,7 @@
         };
         xhr.send();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="./weather.js"></script>
 </body>
-
 </html>
