--- a/views/weather.html
+++ b/views/weather.html
@@ -8,7 +8,7 @@
     <title>Pogoda!</title>
 </head>
 <body>
-    <div id="header"></div>
+    <header id="header"></header>
     <main>
         <div class="input">
             <input type="text" placeholder="Wprowadź nazwę miasta">
@@ -27,15 +27,8 @@
     </main>
     <footer></footer>
 
-    <script>
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET', 'header.html');
-        xhr.onload = function () {
-            document.getElementById('header').innerHTML = xhr.response;
-        };
-        xhr.send();
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="header.js"></script>
     <script src="./weather.js"></script>
 </body>
 </html>
